ingress/canary-env-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-v1
  namespace: prod 
  labels:
    app: pod-v1
spec:
  selector:
    matchLabels:
      app: pod-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0-alpine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-v2
  namespace: prod
  labels:
    app: pod-v2
spec:
  selector:
    matchLabels:
      app: pod-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: pod-v2
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.0-alpine
#registry.cn-hangzhou.aliyuncs.com/lfy_k8s_images/nginx-test:env-msg
---
apiVersion: v1
kind: Service
metadata:
  name: svc-v1
  namespace: prod
spec:
  selector:
    app: pod-v1
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-v2
  namespace: prod 
spec:
  selector:
    app: pod-v2
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
