ingress/network-env-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-net-rule-1
  namespace: test
spec:
  selector:
    app: net-rule
  type: NodePort             # 改为 NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    #nodePort: 80          # 范围 30000-32767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-net-rule-1
  namespace: test
  labels:
    app: net-rule
spec:
  replicas: 3
  selector:
    matchLabels:
      app: net-rule
  template:
    metadata:
      labels:
        app: net-rule
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0-alpine
        ports:
        - containerPort: 80
