ingress/canary-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-rule-1
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: test.canary.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-v1  
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-rule-2
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "haha"
    nginx.ingress.kubernetes.io/canary-by-cookie: "ccc"
    nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  ingressClassName: nginx
  rules:
  - host: test.canary.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-v2
            port:
              number: 80
