ingress/ingress-affinity-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-affinity
  namespace: test
  labels:
    app: pod-affinity
spec:
  selector:
    matchLabels:
      app: pod-affinity
  replicas: 3
  template:
    metadata:
      labels:
        app: pod-affinity
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: svc-affinity
  namespace: test
spec:
  selector:
    app: pod-affinity
  type: ClusterIP
  ports:
  - name: pod-affinity
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affinity-2
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "it666.com"
spec:
  ingressClassName: nginx
  rules:
  - host: it666.com
    http:
      paths:
      - path: /    
        pathType: Prefix
        backend:
          service:
            name: svc-affinity   ###
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it666-tls
  namespace: test
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - it666.com
    secretName: it666-tls
  rules:
  - host: it666.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-affinity
            port:
              number: 80
