ingress/ingress-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affinity
  namespace: prod 
  labels:
    app: pod-affinity
spec:
  selector:
    matchLabels:
      app: pod-affinity
  replicas: 3
  template:
    metadata:
      labels:
        app: pod-affinity
    spec:
      containers:
      - name: pod-affinity
        image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-affinity
  namespace: prod
spec:
  selector:
    app: pod-affinity
  type: ClusterIP
  ports:
  - name: svc-affinity
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affinity-1
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "it666.com"
spec:
  ingressClassName: nginx
  rules:
  - host: it666.com
    http:
      paths:
      - path: /    ### 
        pathType: Prefix
        backend:
          service:
            name: svc-affinity   ###
            port:
              number: 80
