ingress/ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: #
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
  namespace: prod
spec:
  ingressClassName: nginx
  rules: ## 
  - host: it888.com 
    http:
      paths:
      - backend:
          service:
            name: php-apache
            port:
              number: 80
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
