ingress/ingress-rule-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rule-1
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: it888.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend: #
          service:
            name: svc-rule ## 
            port:
              number: 80 ## 
---
apiVersion: v1
kind: Service
metadata:
  name: svc-rule 
  namespace: test
spec:
  selector:
    app: rule-1
  type: NodePort             #
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    #nodePort: 80          # 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-pod
  namespace: test
  labels:
    app: rule-1 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rule-1
  template:
    metadata:
      labels:
        app: rule-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.20.0-alpine
        ports:
        - containerPort: 80
