ingress/ingress-rule-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rule-2
  namespace: test
spec:
  ingressClassName: nginx
  defaultBackend:  
    service: 
      name: php-apache 
      port:
        number: 80
  rules:
  - host: it888.com
    http:
      paths:
      - path: /a
        pathType: Prefix
        backend:
          service:
            name: php-apache 
            port:
              number: 80
