ingress/net-rule-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-rule-2
  namespace: test
spec:
  podSelector:  #
    matchLabels:
      role: db
  policyTypes:  #
  - Ingress
  - Egress
  ingress:    ##
  - from:   
    - ipBlock:
        cidr: 192.168.88.0/24
        except:
        - 192.168.88.60/32
    - namespaceSelector:
        matchLabels:
          name: net-rule
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 30736
  egress:  ## 
  - to:
    - ipBlock:
        cidr: 192.168.88.0/24
    ports:
    - protocol: TCP
      port: 5978
